--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,15 +8,43 @@ main {
 }
 
 section {
-    text-align: center;
-    flex: 50%;
+    justify-content: center;
+    align-items: center;
     border: 1px solid;
+    width: 50%;
+    max-height: 100%;
+    margin: 10px;
+    padding: 15px;
 }
 
-input {
-    width: 500px
+section p {
+    display: flex;
+    padding: 15px;
+    width: 350px;
+    height: 350px;
+    font-size: 36px;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid teal;
+    border-radius: 50%;
+    background: linear-gradient(#abe3f0, #017565);
+}
+
+input,
+textarea {
+    width: 85%;
+    height: 1.5em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
 }
 
 #content {
-    height: 30%;
+    height: 5.5em;
+}
+
+
+
+button {
+    padding: 7px;
+    margin: 10px;
 }
