--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    max-width: 1500px;
+}
+
 header {
     display: flex;
     justify-content: center;
@@ -5,29 +9,37 @@ header {
 
 main {
     display: flex;
+    padding: 8px;
+    border: black 2px solid;
 }
 
 section {
     justify-content: center;
     align-items: center;
     border: 1px solid;
-    width: 50%;
-    max-height: 100%;
+    width: 45%;
+    min-height: 50vh;
+    max-height: 85vh;
     margin: 10px;
-    padding: 15px;
+    padding: 30px;
+    background-color: #2c5385;
+    font-size: 28px;
+    color: rgb(245, 255, 233);
+    text-decoration: underline;
 }
 
-section p {
+p {
     display: flex;
-    padding: 15px;
-    width: 350px;
-    height: 350px;
-    font-size: 36px;
+    flex: auto;
     justify-content: center;
     align-items: center;
+    height: 50vh;
     border: 3px solid teal;
+    font-size: 56px;
+    font-weight: 100;
     border-radius: 50%;
     background: linear-gradient(#abe3f0, #017565);
+    text-wrap: nowrap;
 }
 
 input,
