--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,10 @@ header input {
 
 label {
     margin-top: 24px;
-    font-size: 20px;
+    font-size: 24px;
+    height: 24px;
+    background-color: rgb(141, 224, 141);
+    box-shadow: 0px 0px 25px 10px rgb(141, 224, 141);
 }
 
 button {
@@ -44,7 +47,7 @@ button {
 
 footer #portfolio {
     display: block;
-    margin-top: 8px;
+    margin-top: 15px;
     font-size: 50px;
 }
 
@@ -62,4 +65,34 @@ footer #portfolio {
 #portfolio:active {
     background-color: rgb(64, 127, 125);
     ;
+}
+
+@media screen and (max-width: 766px) {
+
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 20vh;
+    }
+
+    h1 {
+        font-size: 45px;
+    }
+
+    main {
+        margin-top: 30px;
+    }
+
+    #desktop {
+        display: none;
+    }
+
+    section {
+        width: 100vw;
+    }
+
+    footer #portfolio {
+        font-size: 25px;
+    }
 }
